--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,13 @@
     "nesbot/carbon": "^3.11",
     "twig/twig": "^3.0",
     "vlucas/phpdotenv": "^5.6",
-    "guzzlehttp/guzzle": "^7.10"
+    "guzzlehttp/guzzle": "^7.10",
+    "symfony/routing": "^7.4"
   },
   "require-dev": {
-    "pestphp/pest": "^4.2"
+    "pestphp/pest": "^4.2",
+    "friendsofphp/php-cs-fixer": "^3.92",
+    "phpstan/phpstan": "^2.1"
   },
   "config": {
     "allow-plugins": {
